crates/analyzer/tests/snapshots/errors__call_keccak_with_2_args.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: `keccak256` expects 1 argument, but 2 were provided
  ┌─ [snippet]:3:3
  │
3 │   keccak256(1, 2)
  │   ^^^^^^^^^ -  - supplied 2 arguments
  │   │             
  │   expects 1 argument

error: `u256` can not be used as an argument to `keccak256`
  ┌─ [snippet]:3:12
  │
3 │   keccak256(1, 2)
  │            ^^^^^^ wrong type
  │
  = Note: `keccak256` expects a byte array argument


